# rye-sample

./: Readme.md  dev-requirements.txt  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
0h/: README.md  pyproject.toml
0h/src/0h/: __init__.py
rye-migrate/: README.md  pyproject.toml
