[project]
name = "rye-sample"
version = "0.0.1"
description = ""
authors = [{name = "glassmonkey"}]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.10"

[tool.poetry]
name = "rye-sample"
version = "0.0.1"
description = ""
authors = ["glassmonkey"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.25.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true