[project]
name = "rye-sample"
version = "0.0.1"
description = ""
authors = [{name = "glassmonkey"}]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "numpy==1.26.1 ; python_version >= '3.10' and python_version < '3.13'",
    "pandas==2.1.2 ; python_version >= '3.10' and python_version < '3.13'",
    "python-dateutil==2.8.2 ; python_version >= '3.10' and python_version < '3.13'",
    "pytz==2023.3.post1 ; python_version >= '3.10' and python_version < '3.13'",
    "six==1.16.0 ; python_version >= '3.10' and python_version < '3.13'",
    "tzdata==2023.3 ; python_version >= '3.10' and python_version < '3.13'",
]

[tool.poetry]
name = "rye-sample"
version = "0.0.1"
description = ""
authors = ["glassmonkey"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.25.0"
pandas = "^2.1.2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
