[project]
name = "rye-sample"
version = "0.0.1"
description = ""
authors = [{name = "glassmonkey"}]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "numpy==1.25.0 ; python_version >= '3.10' and python_version < '3.13'",
    "packaging==23.2 ; python_version >= '3.10' and python_version < '3.13'",
    "pandas==2.1.2 ; python_version >= '3.10' and python_version < '3.13'",
    "python-dateutil==2.8.2 ; python_version >= '3.10' and python_version < '3.13'",
    "pytz==2023.3.post1 ; python_version >= '3.10' and python_version < '3.13'",
    "six==1.16.0 ; python_version >= '3.10' and python_version < '3.13'",
    "tzdata==2023.3 ; python_version >= '3.10' and python_version < '3.13'",
]

[tool.poetry]
name = "rye-sample"
version = "0.0.1"
description = ""
authors = ["glassmonkey"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.2"
pandas = "^2.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "colorama==0.4.6 ; python_version >= '3.10' and python_version < '3.13' and sys_platform == 'win32'",
    "exceptiongroup==1.1.3 ; python_version >= '3.10' and python_version < '3.11'",
    "iniconfig==2.0.0 ; python_version >= '3.10' and python_version < '3.13'",
    "packaging==23.2 ; python_version >= '3.10' and python_version < '3.13'",
    "pluggy==1.3.0 ; python_version >= '3.10' and python_version < '3.13'",
    "pytest==7.4.3 ; python_version >= '3.10' and python_version < '3.13'",
    "tomli==2.0.1 ; python_version >= '3.10' and python_version < '3.11'",
]

[tool.hatch.metadata]
allow-direct-references = true
